--- a/article.html
+++ b/article.html
@@ -16,11 +16,10 @@
             margin-right: 10px;
         }
     </style>
-    <!--<link rel="stylesheet" href="css/style.css">-->
 </head>
 <body>
 <!--导航栏-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">厉害了，我的哥</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -107,6 +106,5 @@
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
 <!--菜单-->
-<!--<script src="js/index.js"></script>-->
 </body>
 </html>
