--- a/indexbak.html
+++ b/indexbak.html
@@ -15,16 +15,21 @@
             margin-left: 10px;
             margin-right: 10px;
         }
+        .message {
+            margin-top: 600px;
+            margin-bottom: 10px;
+        }
+        .messagecard {
+            margin-bottom: 10px;
+         }
     </style>
     <!--<link rel="stylesheet" href="css/style.css">-->
 </head>
 <body>
 <!--导航栏-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">厉害了，我的哥</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -62,8 +67,10 @@
                     Login
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Login in</a>
-                    <a class="dropdown-item" href="#">Login up</a>
+                    <input type="button" class="dropdown-item" data-toggle="modal" data-target="#logininModal" value="login in">
+                    </input>
+                    <input type="button" class="dropdown-item" data-toggle="modal" data-target="#loginupModal" value="login up">
+                    </input>
                 </div>
             </li>
         </ul>
@@ -338,12 +345,11 @@
     </div>
 </div>
 -->
-
 <!--body-->
 <div>
-    <div class="container">
+    <div class="container message">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 messagecard">
                 <div class="card">
                     <div class="card-header">
                         Featured
@@ -355,7 +361,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 messagecard">
                 <div class="card">
                     <div class="card-header">
                         Featured
@@ -367,7 +373,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 messagecard">
                 <div class="card">
                     <div class="card-header">
                         Featured
@@ -383,6 +389,7 @@
     </div>
 </div>
 <!--body-->
+
 
 <!--footer-->
 <footer>
@@ -400,6 +407,70 @@
 </footer>
 <!--footer-->
 
+
+<!-- Modal -->
+<div class="modal fade" id="logininModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ModalLabel">登录</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <!--<div class="form-group">-->
+                        <!--<label for="userName">你的名字</label>-->
+                        <!--<input type="text" class="form-control" id="userName" aria-labelledby="name" placeholder="输入你的名字">-->
+                    <!--</div>-->
+                    <div class="form-group">
+                        <label for="Email">Email address</label>
+                        <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="输入你的邮箱">
+                        <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
+                    </div>
+                    <div class="form-group">
+                        <label for="Password">Password</label>
+                        <input type="password" class="form-control" id="Password" placeholder="输入你的密码">
+                        <a href="#">忘记密码？</a>
+                    </div>
+                    <button type="submit" class="btn btn-primary" data-dismiss="modal">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="loginupModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">注册</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                    <label for="userName">你的名字</label>
+                    <input type="text" class="form-control" id="userName" aria-labelledby="name" placeholder="输入你的名字">
+                    </div>
+                    <div class="form-group">
+                        <label for="Email">Email address</label>
+                        <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="输入你的邮箱">
+                    </div>
+                    <div class="form-group">
+                        <label for="Password">Password</label>
+                        <input type="password" class="form-control" id="Password" placeholder="输入你的密码">
+                    </div>
+                    <button type="submit" class="btn btn-primary" data-dismiss="modal">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--bootstrap-->
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
